--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5509,7 +5509,7 @@ the extension of the library, $sem(\syntax{NativeOMS})$ will be undefined.
 
 \semdom{sem(\Gamma, \syntax{LibraryDefn})= \Gamma'}
 
-$sem(\Gamma, \syntax{library LibraryName Qualification LibraryItem}_1,\ldots \syntax{LibraryItem}_n)= \Gamma'$\\
+$sem(\Gamma, \syntax{library LibraryName Qualification LibraryItem}_1 \ldots \syntax{LibraryItem}_n)= \Gamma'$\\
 \noindent where  $sem(\Gamma, \syntax{Qualification}) = \Gamma'$, $sem(\Gamma', \syntax{LibraryItem}_1) = \Gamma_1$,\\
   $sem(\Gamma_1,  \syntax{LibraryItem}_2) = \Gamma_2$, $\ldots$,  $sem(\Gamma_{n-1}, \syntax{LibraryItem}_n) = \Gamma'$.
 \footnote{Note that \syntax{LibraryName} is just discarded here.
@@ -5661,7 +5661,7 @@ $$sem(\Gamma, \syntax{network NetworkElements  ExcludeExtensions})= G'$$
 
 \semdom{sem(\Gamma, \syntax{NetworkElements}) = G'}
 
-$$sem(\Gamma, \syntax{network-elements}\ \syntax{NetworkElement}_1,\ldots,\syntax{NetworkElement}_n) = G'$$
+$$sem(\Gamma, \syntax{network-elements}\ \syntax{NetworkElement}_1 \ldots \syntax{NetworkElement}_n) = G'$$
 
 \noindent where \\
  $G_1 = sem(\Gamma, G_\emptyset, \syntax{NetworkElement}_1)$\\
@@ -5710,13 +5710,13 @@ $sem(\Gamma, \syntax{OMS}) = \Gamma'$.
 
 The semantics of a \syntax{BasicOMS} $O$ has been defined above.
 
-The semantics of $O = \syntax{oms-ref O', ImportName}$
+The semantics of $O = \syntax{oms-ref O' ImportName}$
 is given by
  \begin{itemize}
-   \item $\Inst(\syntax{oms-ref O', ImportName}) = \Inst(\Gamma(O'))$
-   \item $\Sig(\syntax{oms-ref O', ImportName}) = \Sig(\Gamma(O'))$
-   \item $\Mod(\syntax{oms-ref O', ImportName}) = \Mod(\Gamma(O'))$
-   \item $\Th(\syntax{oms-ref O', ImportName}) = \Th(\Gamma(O'))$
+   \item $\Inst(\syntax{oms-ref O' ImportName}) = \Inst(\Gamma(O'))$
+   \item $\Sig(\syntax{oms-ref O' ImportName}) = \Sig(\Gamma(O'))$
+   \item $\Mod(\syntax{oms-ref O' ImportName}) = \Mod(\Gamma(O'))$
+   \item $\Th(\syntax{oms-ref O' ImportName}) = \Th(\Gamma(O'))$
    \item $Env(\Gamma, O)$ extends the graph of imports $\Gamma.imports$
          with a new node for $O$ labeled as defined in the items above
          and with a new edge from $O'$ to $O$ named \syntax{ImportName} 
@@ -6072,7 +6072,7 @@ is
 
 \semdom{sem(\Gamma, L, \syntax{LogicReduction}) = (\Phi, \alpha,\beta)}
 
-$sem(\Gamma, \syntax{logic-reduction IRI}=(\Phi,\alpha,\beta)$,
+$sem(\Gamma, \syntax{logic-reduction IRI})=(\Phi,\alpha,\beta)$,
 where $(\Phi,\alpha,\beta)$ is the institution morphism
 named by \syntax{IRI} in the heterogeneous logical environment.
 
@@ -6092,7 +6092,7 @@ sem(\Gamma,\Sigma,\syntax{Symbol}_n)$, if such a sub-signature exists and is oth
 
 \semdom{sem(\Gamma,\Sigma,\Sigma', \syntax{SymbolMapItems})= \sigma:\Sigma\to\Sigma'}
 
- $$sem(\Gamma,\Sigma,\Sigma',\syntax{symbol-map-items SymbolOrMap}_1, \ldots, \syntax{SymbolOrMap}_n) = \sigma$$
+ $$sem(\Gamma,\Sigma,\Sigma',\syntax{symbol-map-items SymbolOrMap}_1 \ldots \syntax{SymbolOrMap}_n) = \sigma$$
 
 where 
 $\sigma = makeMorphism_{logic(\Gamma.current)}((s_1, t_1),\ldots, (s_n,t_n)))$\\
@@ -6582,7 +6582,7 @@ $logic'$ .
 
 \semdom{sem(\Gamma, G_1, G_2, \syntax{RefMap}) = \sigma:G_1\to G_2}
 
-$$sem(\Gamma, G_1, G_2, \syntax{refmap-network}, \syntax{NodeMap}_1,\ldots, \syntax{NodeMap}_n)
+$$sem(\Gamma, G_1, G_2, \syntax{refmap-network} \syntax{NodeMap}_1 \ldots \syntax{NodeMap}_n)
 = \sigma$$
 where \\
 $sem(\Gamma, G_1, G_2,\syntax{NodeMap}_1)= (\syntax{OMSName}^1_1, \syntax{OMSName}^1_2,\rho_1,\sigma_1)$, $\ldots$\\
@@ -6646,7 +6646,7 @@ components given by $sem(\Gamma,\syntax{OMS})$ and with
 a new theorem link from this new node to the node $\Name(\syntax{OMSName})$, labeled with
 the identity morphism on $\Sigma$.
 
-$$sem(\Gamma,\syntax{network-network-entailment Network$_1$ ,Network$_2$}) = G$$
+$$sem(\Gamma,\syntax{network-network-entailment Network$_1$ Network$_2$}) = G$$
 
 \noindent where $sem(\Gamma, \syntax{Network}_1) = G_1$,
 $sem(\Gamma, \syntax{Network}_2) = G_2$, 
@@ -6767,7 +6767,7 @@ $$sem(\Gamma, L_1,\syntax{AlignSem})=\begin{cases}
                                                                                                                    logic-specific.                                                                                                
                                                                                                                   
 
-\semdom{sem(\Gamma, L_1, L_2, \syntax{AlignCard AlignSem},C_1,\ldots,C_n)=G}
+\semdom{sem(\Gamma, L_1, L_2, \syntax{AlignCard AlignSem}\ C_1 \ldots C_n)=G}
 
 $sem(\Gamma, L_1, L_2, \syntax{AlignCard AlignSem},C_1,\ldots,C_n)=G$
 
