new section heading for annex A

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6905,7 +6905,7 @@ elided, and left for a later version of DOL.
 
 \appendix
 
-\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
+\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary that implements the DOL terminology}\label{a:lola}
 
 \begin{figure}
   \centering
