--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -88,6 +88,7 @@ draft%
 \usepackage{standalone}
 \usepackage[final]{graphicx}
 \usepackage{tikz}
+\usepackage{rotating}
 \usetikzlibrary{matrix,shapes,arrows,calc}
 \usepackage{tikz-uml}
 \input{illustrations/DOL-tikz-preamble}
@@ -6907,12 +6908,20 @@ elided, and left for a later version of DOL.
 
 \chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
 
-\begin{figure}
-  \centering
+% a landscape figure which scales and rotates the file cat.eps or cat.pdf
+\begin{sidewaysfigure}
+\centering
    \includegraphics[width=\textwidth]{illustrations/DOL-ontograph-layers-OMG} 
   \caption{Subset of the OntoIOp registry, shown as an RDF graph}
 \label{f:DOL-threelayers}
-\end{figure}
+\end{sidewaysfigure}
+
+%\begin{figure}
+%  \centering
+%   \includegraphics[width=\textwidth]{illustrations/DOL-ontograph-layers-OMG} 
+%  \caption{Subset of the OntoIOp registry, shown as an RDF graph}
+%\label{f:DOL-threelayers}
+%\end{figure}
 
 This annex specifies LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL, as well as serializations and translations, when they are entered into the \termref{registry} stipulated by chapter~\ref{c:conformance}.
 The normative subset of LoLa is given as an RDF Schema vocabulary (\nisref{W3C/TR REC-rdf-schema:2014}) having the namespace IRI \url{http://www.omg.org/spec/DOL/1.0/rdf\#}.\footnote{The full version of LoLa is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in DOL, at
