--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3209,7 +3209,7 @@ bank). After three unsuccessful trials the card is kept.
 \end{figure}
 
 Figure~\ref{fig:interaction} shows a possible \emph{interaction}
-between an \uml{atm} and a \uml{bank} object, which consists out of
+between an \uml{atm} and a \uml{bank} object, which consists of
 four messages: the \uml{atm} requests the \uml{bank} to \uml{verify}
 if a card and PIN number combination is valid, in the first case the
 \uml{bank} requests to reenter the PIN, in the second case the
