updated inventory document minor change to standards doc

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2,7 +2,7 @@
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
 
-\newcommand{\version}{0.94}
+\newcommand{\version}{1.0}
 
 
 %todo
@@ -9438,7 +9438,7 @@ to the term \termref{structured OMS} in this \IS}
 
 \toleft\includegraphics[scale=0.4]{mof/dia/dia4.png}
 
-\includegraphics[scale=0.6]{mof/dia/dia5.png}
+%\includegraphics[scale=0.6]{mof/dia/dia5.png}
 
 \sclause{Queries}
 
