--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8190,8 +8190,8 @@ logic, unions, etc.}
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{illustrations/ontograph-standards}
-  \caption{Translations between conforming OMS languages (normative)}
+  \includegraphics[width=\textwidth]{illustrations/ontograph-standards-new}
+  \caption{Translations between conforming OMS languages}
   \label{fig:ontograph-standards}
 \end{figure}
 
