--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -533,6 +533,8 @@ author=,date=,id=,replyto=,type=}{}%
 
 \begin{document}
 
+\nocite{OM2014,JYB-Festschrift2015-DOL,womo13,DOL-TKE2012,DOL-3semantics,blendingc3gi12,hyper2010}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  FRONTMATTER:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
