machine readable files identifiers to front page (now really)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -567,7 +567,7 @@ Version \version
 
 OMG Document Number: ad/2015-05-03 \\
 Normative reference: \\
-Machine readable files(s): \\
+Machine readable files(s): ad/2015-05-05, ad/2015-05-05, ..., ad/2015-05-12, \\ \qquad \qquad \qquad ad/2015-05-14 \\
 Normative: \\
 Non-normative: \\
  
