--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2243,7 +2243,7 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
 
 \end{definitions}
 
-\sclause{Features of OMS Languages}
+\sclause{Features of OMS Languages}\label{c:terms-features}
  
 \begin{definitions}
   \termdefinition{OMS language translation}{mapping from constructs in the source \termref{OMS language} to their equivalents in the target \termref{OMS language}.}
@@ -6957,15 +6957,15 @@ pos=h,
   LogicMapping & Mapping & \NN
   Translation & Mapping & \NN
   Reduction & Mapping & \NN
-  DefaultMapping & Mapping & \NN
-  WeaklyExactMapping & Mapping & \NN
-  ExactMapping & WeaklyExactMapping & \NN
-  FaithfulMapping & Mapping & \NN
-  ModelExpansiveMapping & FaithfulMapping & \NN
+  DefaultMapping & Mapping & \ref{c:terms-features} \NN
+  WeaklyExactMapping & Mapping & \ref{s:foundations} \NN
+  ExactMapping & WeaklyExactMapping & \ref{s:foundations} \NN
+  FaithfulMapping & Mapping & \ref{c:terms-features} \NN
+  ModelExpansiveMapping & FaithfulMapping & \ref{c:terms-features} \NN
   ModelBijectiveMapping & ModelExpansiveMapping & \NN
-  Embedding & ModelBijectiveMapping, LogicMapping, Translation & \NN
+  Embedding & ModelBijectiveMapping, LogicMapping, Translation & \ref{s:foundations} \NN
   PlainMapping & Mapping & \NN
-  SimpleTheoroidalMapping & Mapping & \LL
+  SimpleTheoroidalMapping & Mapping & \ref{c:term-logic} \LL
 }
 
 \tref{tab:logic-vocab-prop} lists the object properties of LoLa.  Each row of the table translates into the following OWL declarations (given in OWL Manchester syntax).  The definitions of the properties can be found in \cref{terms-and-defs}, sometimes under different names if stated so in the table.
