--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -37,7 +37,7 @@ draft%
 \usepackage{pdflscape}
 
 %\usepackage[show]{ed}
-\usepackage[show]{ed}
+\usepackage[hide]{ed}
 
 %color highlight, for editing
 \usepackage{color}
@@ -3959,7 +3959,8 @@ Approximation        = 'approx' , [ QualInterfaceSignature ] , [ LogicRef ] ;
 Filtering            = 'select' , BasicOMS 
                      | 'reject' , BasicOMS ;
 
-ExtensionOMS         = extension-oms , [ ExtConsStrength ] , [ ExtensionName ] , ExtendingOMS ;
+ExtensionOMS         = extension-oms , [ ExtConsStrength ] , [ ExtensionName ] , 
+                                       ExtendingOMS ;
 
 ConsStrength         = Conservative 
 		     | 'monomorphic'  
@@ -4100,7 +4101,8 @@ Refinement           = 'ref-oms' , OMS
                      | 'simple-network-ref' , Network , RefMap , Refinement ;
 RefMap               = 'refmap-oms' , [ LogicTranslation ] , [ SymbolMapItems ] 
                      | 'refmap-network' , { NodeMap } ;
-NodeMap              = 'node-map', OMSName , OMSName , { LogicTranslation } , [ SymbolMapItems ] ;
+NodeMap              = 'node-map', OMSName , OMSName , 
+                                   { LogicTranslation } , [ SymbolMapItems ] ;
 
 
 Entailment           = 'entailment' , EntailmentName , EntailmentType ;
@@ -4533,7 +4535,8 @@ ExtensionName        = '%(' , IRI , ')%' ;
 
 OMSkeyword          = 'ontology' | 'onto' | 'specification' | 'spec' | 'model' | 'oms' ;
 
-OMSDefn             = OMSkeyword , OMSName , '=' , [ ConsStrength ] , OMS , 'end'  ; 
+OMSDefn             = OMSkeyword , OMSName , '=' , [ ConsStrength ] , 
+                                   OMS , 'end'  ; 
 
 Symbol               = IRI ;
 SymbolMap            = Symbol , '|->' , Symbol ;
