added dol-papers to bib

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9827,7 +9827,7 @@ be ambiguous in a normal request.
 \bibliographystyle{plain} 
 \renewcommand{\bibname}{References}
 \label{a:bibliography}
-\bibliography{dol,rfc,tptp}
+\bibliography{dol,rfc,tptp,dol-papers}
 \addcontentsline{toc}{chapter}{References}
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
