--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6981,27 +6981,26 @@ ObjectProperty: ...
 \end{lstlisting}
 
 %\todonote[type=q-aut,author=Christoph Lange]{we need to define ``sublogic'' as a term – how?  I guess that would include the notion of an ``OWL profile''. TM: has been defined in section 4}
-\newcommand*{\PropertyDocumentation}[1]{\NN\multicolumn{3}{p{\linewidth}}{\textit{#1}}}
+% \newcommand*{\PropertyDocumentation}[1]{\NN\multicolumn{3}{p{\linewidth}}{\textit{#1}}}
 \ctable[
 caption={LoLa Properties},
 width=\linewidth,
 mincapwidth=\textwidth,
 label={tab:logic-vocab-prop},
 pos=h,
-]{lll}{% table footnotes
+]{lllX}{% table footnotes
 }{\FL
-  Property & domain & range
-  \PropertyDocumentation{documentation}\ML
-  subLogicOf & Logic & Logic
-  \PropertyDocumentation{The subject is a sublogic of the object}\ML
-  supportsLogic & Language & Logic
-  \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
-  specifiesSemanticsOf & Logic & Language
-  \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
-  supportsSerialization & Language & Serialization
-  \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
-  serializes & Serialization & Language
-  \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
+  Property & Domain & Range & Section \ML
+  isSubLogicOf & Logic & Logic & \ref{c:term-logic} \NN
+  % \PropertyDocumentation{The subject is a sublogic of the object}\ML
+  supportsLogic & Language & Logic & \ref{c:term-logic} \NN
+  % \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
+  specifiesSemanticsOf & Logic & Language & inverse of supportsLogic \NN
+  % \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
+  supportsSerialization & Language & Serialization & \ref{c:term-serializations} \NN
+  % \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
+  serializes & Serialization & Language & \ref{c:term-serializations} \NN
+  % \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
 
 \infannex{Conformance of OWL 2 DL With DOL}\label{a:owl}
