--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -935,7 +935,7 @@ The formal semantics is given in clause \ref{c:semantics}.
 6.5.4(a)& 
 Existing OMS in existing serializations shall validate as OMS in the metalanguage with a minimum
 amount of syntactic adaptation.	& 
-Any document providing an OMS in a serialization of a DOL conformant
+Any document providing an OMS in a serialization of a DOL conforming
 language can be used as-is in DOL, by reference to its IRI.
 See \ref{sec:existing-serialization}.
    \\ \hline
@@ -1506,7 +1506,7 @@ example, fragment URIs in the style of \nisref{IETF/RFC 5147} for identifying te
 
 Independently from the conformance levels given above, there is the following hierarchy of conformance \wrt CURIEs (compact URIs) as a means of abbreviating IRIs (grammar specified in \cref{c:curies}), listed from highest to lowest:
 \begin{description}
-\item[Prefixed CURIE conformance] The given serialization allows non-logical symbol identifiers to have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}, where a declaration of DOL-conformance of a serialization \may redefine the separator character to a character different from \syntax{:}).  A serialization that conforms \wrt prefixed CURIE conformande is \notrequired to support CURIEs with no prefix: its declaration of DOL-conformance \may forbid the use of prefixed CURIEs.\\
+\item[Prefixed CURIE conformance] The given serialization allows non-logical symbol identifiers to have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}, where a declaration of DOL-conformance of a serialization \may redefine the separator character to a character different from \syntax{:}).  A serialization that conforms \wrt prefixed CURIE  is \notrequired to support CURIEs with no prefix: its declaration of DOL-conformance \may forbid the use of prefixed CURIEs.\\
   Informative comments:
   \begin{itemize}
   \item In the case that CURIEs are used, a prefix map with multiple prefixes \may be used to map the non-logical symbol identifiers of a native OMS to IRIs in multiple namespaces (\cf \cref{c:map-ids})
@@ -1563,7 +1563,7 @@ However, for DOL conformance, that application has to be capable of exporting do
 explicit references to the logics used.
 
 DOL-aware applications also should be able to strip DOL annotations
-from embedded fragments in other OMS languages. Moreover, they shoud
+from embedded fragments in other OMS languages. Moreover, they should
 be able to expand CURIEs into IRIs when requested.
 
 \index{conformance|)}
@@ -1713,7 +1713,7 @@ plus non-logical annotations\index{annotation}.}
     \item properties (denoting binary relations over objects; also called
       roles).
     \end{itemize}
-    This is opposed to logical symbols in OWL, e.g.\ those for intersection
+    This is opposed to logical symbols in OWL, e.g., those for intersection
     and union of classes.
   \end{example}
 
@@ -2455,7 +2455,7 @@ domains represented by two models intersect and there is a need to
 register details of the correspondence between the structures in the
 models that semantically represent this overlap. Within these
 standards, a model is a representation of some aspect of a domain of
-interest using a normative modelling facility and modelling
+interest using a normative modeling facility and modeling
 constructs.
 
 The notion of logical interoperability is distinct from the notion of 
@@ -2548,7 +2548,7 @@ languages, logics and translations) precise (\emph{normative}).
 the terms in chapter~\ref{terms-and-defs}, and for OMS languages and
 translation that conform with \DOL  (\emph{normative}).
 
-\medskip \noindent Various languages are shown to be DOL conformant in
+\medskip \noindent Various languages are shown to  conform to \DOL in
 informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
 (annex~\ref{a:cl}), RDF and RDF Schema (annex~\ref{a:rdfs}), UML class
 diagrams (annex~\ref{a:uml-class}, EMOF (annex~\ref{a:EMOF}), and
@@ -2570,7 +2570,7 @@ each scenario, we list its status of implementation, the \DOL features it makes 
 provide a brief description
 (\emph{informative}).
 
-Annex~\ref{a:tools} gives an overview of avaiable software tools for
+Annex~\ref{a:tools} gives an overview of available  software tools for
 DOL.  Annex~\ref{a:loc/id} discusses the implementation of a
 linked-data compliant IRI scheme used in one of these tools
 (\emph{informative}).
@@ -2705,7 +2705,7 @@ The use of different OMS within the same context leads to  several
 challenges in the design and deployment of OMS, which have been addressed by current research in 
 ontological engineering, formal software specification and formal modeling:
 \begin{itemize}
-\item How can we support sharability and reusability of OMS within the same domain?
+\item How can we support shareability and reusability of OMS within the same domain?
 \item How can we merge OMS in different domains, particularly in the cases 
 in which the OMS are axiomatized in different logical languages?
 \item What notions of modularity play a role when only part of an OMS is being shared or reused?
@@ -2795,7 +2795,7 @@ language. The relation between the \OWL ontology and the FOL axioms is that of a
 import. In the result, both the \OWL and the FOL axioms are amenable to, e.g., automated consistency 
 checks and theorem proving. Hence, all available information can be used in the reasoning process.
 For example, the ontology below extends the \OWL definition of \texttt{isProperPartOf} as an asymmetric relation
-with a first-order axiom (in Common Logic) asserting that the relation is also transivitive.
+with a first-order axiom (in Common Logic) asserting that the relation is also transitive.
 \begin{lstlisting}[basicstyle=\small\ttfamily,language=dolText,morekeywords={logic,ontology,props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 logic CommonLogic
 ontology Parthood =
@@ -3238,7 +3238,7 @@ OCL constraint \uml{trialsNum >= 3}, which refines its semantics:
 \uml{keepCard} can only be invoked if the OCL constraints holds.
 
 Finally, the dynamic behaviour of the \uml{atm} object is specified by
-the \emph{behavioural state machine} shown in
+the \emph{behavioral state machine} shown in
 Fig.~\ref{fig:state-machine}. The machine consists of five states
 including \uml{Idle}, \uml{CardEntered}, etc.  Beginning in the
 initial \uml{Idle} state, the user can \emph{trigger} a state change
@@ -3656,9 +3656,9 @@ General annotation of OMS and their parts works in a similar way.  Here, DOL doe
 \ednote{Till, is this standoff markup remark up to date? TM: we promise standoff markup at various places, but we never are specific how this can be written in DOL.\\
 CL: I have now emphasized that DOL itself doesn't do annotation but only identification, whereas annotation is left to RDF.}
 
-\section{DOL in the Metamodelling Hierarchy}
+\section{DOL in the Metamodeling Hierarchy}
 
-DOL uses the metamodelling hierarchy known from model-driven engineering:
+DOL uses the metamodeling hierarchy known from model-driven engineering:
 $$\xymatrix{
 \Text{M4} &&&
 \Text{Set \& category theory}\ar@(ul,ur)^{\Text{specified in}} \restore \\
@@ -6970,27 +6970,26 @@ ObjectProperty: ...
 \end{lstlisting}
 
 %\todonote[type=q-aut,author=Christoph Lange]{we need to define ``sublogic'' as a term – how?  I guess that would include the notion of an ``OWL profile''. TM: has been defined in section 4}
-\newcommand*{\PropertyDocumentation}[1]{\NN\multicolumn{3}{p{\linewidth}}{\textit{#1}}}
+% \newcommand*{\PropertyDocumentation}[1]{\NN\multicolumn{3}{p{\linewidth}}{\textit{#1}}}
 \ctable[
 caption={LoLa Properties},
 width=\linewidth,
 mincapwidth=\textwidth,
 label={tab:logic-vocab-prop},
 pos=h,
-]{lll}{% table footnotes
+]{lllX}{% table footnotes
 }{\FL
-  Property & domain & range
-  \PropertyDocumentation{documentation}\ML
-  subLogicOf & Logic & Logic
-  \PropertyDocumentation{The subject is a sublogic of the object}\ML
-  supportsLogic & Language & Logic
-  \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
-  specifiesSemanticsOf & Logic & Language
-  \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
-  supportsSerialization & Language & Serialization
-  \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
-  serializes & Serialization & Language
-  \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
+  Property & Domain & Range & Section \ML
+  isSubLogicOf & Logic & Logic & \ref{c:term-logic} \NN
+  % \PropertyDocumentation{The subject is a sublogic of the object}\ML
+  supportsLogic & Language & Logic & \ref{c:term-logic} \NN
+  % \PropertyDocumentation{The subject OMS language has a semantics specified in terms of the object logic.}\ML
+  specifiesSemanticsOf & Logic & Language & inverse of supportsLogic \NN
+  % \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsLogic.}\ML
+  supportsSerialization & Language & Serialization & \ref{c:term-serializations} \NN
+  % \PropertyDocumentation{OMS in the subject OMS language can be serialized in the object serialization.  Note that the serialization should be as specific as possible, \ie one should not say that ``OWL can be serialized in XML'' and ``Common Logic can be serialized in XML'', but instead ``OWL can be serialized in OWL/XML'' and ``Common Logic can be serialized in XCL'', taking into account that OWL/XML and XCL are two different XML languages.}\ML
+  serializes & Serialization & Language & \ref{c:term-serializations} \NN
+  % \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
 
 \infannex{Conformance of OWL 2 DL With DOL}\label{a:owl}
