ednotes; corrected bib item

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7850,7 +7850,8 @@ $CL(\Sigma)$ consisting of:
 %\texttt{(c k)}, where by abuse of notation, we identify $c$ with $\CL(c)$, and $k$ with $(\CL(k))$ (this abuse of notation will also be used in the sequel);
 %  \item for the set of instance specifications $k_1 : c_1, \ldots, k_n : c_n$  an axiom \texttt{(different $k_1$ $\cdots$ $k_n$)} (the unique name assumption);
   \item $\CL$ maps each attribute declaration $c.p : \tau[c'] \in P$ to a predicate $\CL(c.p)$ and axioms stating type-correctness
-and functionality:
+and functionality:\ednote{shouldn't attributes involving Set only also
+be represented in a simplified way?}
 \begin{itemize}
 \item
 \texttt{(forall (x y) (if (c.p x y) (c x))) }
