--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -727,7 +727,7 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 
 @InProceedings{IbanezEtAl15,
   author =       {Yazmin Angelica Ibanez and Till Mossakowski and Andrzej Tarlecki and Don Sannella},
-  title =        {Notions of Modularity for Ontologies and Specifications},
+  title =        {Modularity of Ontologies in an Arbitrary Institution},
   booktitle = {Logic, Rewriting, and Concurrency: A Festschrift Symposium in Honor of José Meseguer},
   year =      {2015},
   editor =    {Narciso Marti-Oliet et al.},
