--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1555,6 +1555,22 @@ algorithms that have been employed in obtaining an alignment.
 
 \sclause{Conformance of an Application With DOL}\label{c:conform:application}
 
+\cbs
+In the sequel, ``DOL abstract syntax'' means an XMI document that
+conforms to the DOL metamodel. Optionally, further representations
+(e.g. as JSON) can be supported.
+\begin{itemize}
+\item
+A \emph{parser} is DOL-conformant if it can parse the DOL textual syntax and produce the corresponding abstract syntax.
+\item
+A \emph{printer} is DOL-conformant if it can read DOL abstract syntax and produce DOL textual syntax.
+\item
+Software that is used to \emph{edit, format or manage} DOL libraries complies with this specification if and only if it is capable to process DOL abstract syntax. Moreover, it needs to meets the requirements for a DOL-conformant parser if it is able to process DOL textual input. It needs to meet the requirements of a DOL-conformant printer, if it is able to generare DOL textual output. However, it is also possible that a software for DOL management will work on the abstract syntax only, and delegates the processing of DOL text to external parsers and/or printers.
+\item
+Software that implements machine reasoning about OMS (e.g., theorem proving, approximation)  complies with this specification if and only if it interprets  OMS libraries according to the semantics defined in section~\ref{c:semantics}.
+\end{itemize}
+\cbe
+
 In practice, DOL-aware \emph{applications} may also deal with documents that are not conforming 
 with DOL according to the criteria established in \cref{c:conform:document}.  However, an 
 application only \emph{conforms} with DOL if it is capable of producing DOL-conforming documents as 
