--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8586,6 +8586,15 @@ The actual translations are specified in \cite{OntoGraph}.
 
 \infannex{Example Uses of all DOL Constructs}\label{a:uses}
 
+This annex provides example uses of DOL constructs.  Jointly with
+chapter~\ref{c:goal}, which already contains DOL examples for the
+usage scenarios, all DOL constructs (although not necessarily all
+variants of each construct) are covered.  The examples follow the DOL
+Text Serialization (chapter ~\ref{a:text-syntax}). The following table
+provides an overview of which DOL language constructs have been 
+covered where.
+
+
 
 %\CLnote[type=q-aut]{Should we have another column here that refers to the \emph{abstract} syntax?}%
 \begin{tabular}{|l|l|}\hline
