--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2753,7 +2753,12 @@ standardized representation language, which can be used to represent structured 
 between OMS as part of OMS networks in a semantically well-defined way. Thus, tools that implement \DOL are able to integrate different OMS into a coherent whole, thereby enabling users of \DOL to overcome the different kind of interoperability issues that illustrated by the usage scenarios in this clause.  
 
 
-
+Most of the following subsections are illustrated with sample OMS
+libraries. These are always written in \DOL, see the \DOL Text
+Serialization in chapter ~\ref{a:text-syntax}. Naturally, they also
+contain parts written in different OMS languages (e.g.\ \OWL), the
+syntax of which is not described in this standard, but in other
+standard documents.
 
 %\section{Problem Statement}	
 %Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) ontologies formalizing domain knowledge, 2) formal models of systems, and 3) the formal specification of systems. Relevant languages include, but are not limited to:
