--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1576,16 +1576,19 @@ with \DOL according to the criteria established in \cref{c:conform:document}.  H
 application only \emph{conforms} with \DOL if it is capable of producing \DOL-conforming documents as 
 its output when requested.
 
-We expect most \DOL-aware applications to support a fixed (possibly extensible) set of OMS languages
-conforming with \DOL.  It is, for example, possible that a \DOL-aware application only supports OWL
+\cbs
+\DOL-aware applications \shall support a fixed (possibly extensible) set of OMS languages
+conforming with \DOL.
+\cbe
+  It is, for example, possible that a \DOL-aware application only supports OWL
 and Common Logic.  In that case, the application may process documents that mix OWL and Common 
 Logic ontologies \emph{without} explicitly declaring the respective logics, as the respective 
 syntaxes of OWL and Common Logic can be distinguished by examining the different keywords.  
 However, for \DOL conformance, that application has to be capable of exporting documents with 
 explicit references to the logics used.
 
-DOL-aware applications also should be able to strip \DOL annotations
-from embedded fragments in other OMS languages. Moreover, they should
+DOL-aware applications also \shall be able to strip \DOL annotations
+from embedded fragments in other OMS languages. Moreover, they \shall
 be able to expand CURIEs into IRIs when requested.
 
 \index{conformance|)}
